force-app/main/default/objects/StandardCustomer__c/StandardCustomer__c.object-meta.xml
<CustomObject>
    <description>Standard Customer (New)</description>
    <label>StandardCustomer</label>
    <nameField>
        <label>ZZNSTKUN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StandardCustomer</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>