force-app/main/default/objects/StandardCustomer__c/fields/LAND1__c.field-meta.xml
<CustomField>
    <fullName>LAND1__c</fullName>
    <description>Country Key</description>
    <label>LAND1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>