force-app/main/default/objects/StandardCustomer__c/fields/ZZDEL__c.field-meta.xml
<CustomField>
    <fullName>ZZDEL__c</fullName>
    <description>Deletion Flag</description>
    <label>ZZDEL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>