force-app/main/default/objects/StandardCustomer__c/fields/ZZHSTLEVEL__c.field-meta.xml
<CustomField>
    <fullName>ZZHSTLEVEL__c</fullName>
    <description>Standard Customer Higher Level</description>
    <label>ZZHSTLEVEL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>