force-app/main/default/objects/StandardCustomer__c/fields/ZZSTCDESC__c.field-meta.xml
<CustomField>
    <fullName>ZZSTCDESC__c</fullName>
    <description>Standard Customer Description</description>
    <label>ZZSTCDESC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>