force-app/main/default/objects/StandardCustomer__c/fields/ZZSTCNAME1__c.field-meta.xml
<CustomField>
    <fullName>ZZSTCNAME1__c</fullName>
    <description>Standard Customer Name (Korean)</description>
    <label>ZZSTCNAME1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>