force-app/main/default/objects/StandardCustomer__c/fields/ZZSTCNAME2__c.field-meta.xml
<CustomField>
    <fullName>ZZSTCNAME2__c</fullName>
    <description>Standard Customer Name (English)</description>
    <label>ZZSTCNAME2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>