force-app/main/default/objects/StandardCustomer__c/fields/ZZSTLEVEL__c.field-meta.xml
<CustomField>
    <fullName>ZZSTLEVEL__c</fullName>
    <description>Standard Customer Level</description>
    <label>ZZSTLEVEL</label>
    <length>2</length>
    <type>Text</type>
</CustomField>